Added sqlite support

--- a/compose.yml
+++ b/compose.yml
@@ -2,6 +2,9 @@ services:
   web:
     build: .
     environment:
+      - TZ=America/Toronto
       - HTTP_PORT=3000
     ports:
       - 3000:3000
+    volumes:
+      - ./data:/data
